add functionality to create task using enter key, and also highlighting trash can when user complete the task, also user now can click anywere on the task and it will complete

--- a/src/components/AddTasks.css
+++ b/src/components/AddTasks.css
@@ -35,3 +35,22 @@
     align-items: center;
     justify-content: center;
 }
+
+.text {
+    margin: 5px 5px 0px 5px;
+    text-align: start;
+}
+
+.warning {
+    margin: 0px 5px 0px 5px;
+    text-align: start;
+    display: none;
+}
+
+.complete {
+    color: chartreuse;
+}
+
+.delete {
+    color: #d63434;
+}
