add new implementation of editing task using a modal

--- a/src/components/AddTasks.css
+++ b/src/components/AddTasks.css
@@ -45,6 +45,7 @@
     margin: 0px 5px 0px 5px;
     text-align: start;
     display: none;
+    max-width: 300px;
 }
 
 .complete {
@@ -53,4 +54,8 @@
 
 .delete {
     color: #d63434;
+}
+
+.edit {
+    color: rgb(255, 200, 0);
 }
