--- a/src/components/AddTasks.css
+++ b/src/components/AddTasks.css
@@ -34,6 +34,7 @@
     gap: 5px;
     align-items: center;
     justify-content: center;
+    margin: 20px 0px;
 }
 
 .text {
@@ -43,6 +44,71 @@
     font-size: 18px;
     color: #fff;
 }
+
+.info-container {
+    background-color: #3E4553;
+    padding: 5px;
+    border: 2px solid #545c6e;
+    margin: 4px 0px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: ease-in-out .2s;
+}
+
+.info-container:hover {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.5s;
+    border: 2px solid #d63434;
+    /* When the animation is finished, start again */
+    animation-iteration-count: inherit;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
+
 
 .warning {
     padding-left: 5px;
