set up the dark mode colors to add later, fix width issue and add borders to media buttons

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -54,3 +54,20 @@
     color: #d63434;
     background-color: #2d323d;
 }
+
+
+
+/* DARK THEME COLORS */
+
+/* 8cff1a
+da4646
+e8e6e3
+181a1b
+ffce1a
+21242c
+323742
+434a58
+485061
+000000
+e8e6e3
+*/
